fix(docs): Title of md container not showing up in bold (on FF/Windows10) #8618

--- a/docs/src/css/app.sass
+++ b/docs/src/css/app.sass
@@ -90,7 +90,7 @@ blockquote .doc-token
   font-size: 3rem
   line-height: 3rem
   padding: 1rem 0
-  font-weight: 500
+  font-weight: 600
   margin: 0 0 .5em !important
 
   a
@@ -102,7 +102,7 @@ blockquote .doc-token
   font-size: 2rem
   line-height: 2rem
   padding: 0.5rem 0
-  font-weight: 500
+  font-weight: 600
   border-bottom: 1px solid #ccc
   margin: 4rem 0 1.5rem
 
